# Lambda-Compiler

./: .gitignore  README.md  autorun.sh  clean.sh  first_stage.asm  lambda compiler.md  makefile  pi  run.sh  test  test_eight_sum  test_fibo  test_fun_param  test_interactive  test_interrupt  test_mul  test_y  testttt  thing
Asm part/: .gitignore  Makefile  balz  balz.asm  copy testando  culo  first_stage.asm  makefile  out.asm
Asm part/logues/: stage_2.asm.epilogue  stage_2.asm.midlogue  stage_2.asm.prologue
Asm part/post_processor/: fun_dedup.py  post_proc.sh  test
Bootloader part/: .gitignore  first_stage.asm  makefile  stage_2.asm  stage_2.asm.epilogue  stage_2.asm.midlogue  stage_2.asm.prologue
Freestyle Testing/: makefile  stage_2.asm
LABMDA/: slides.tex
Lambda part/: .gitignore  LambdaCompiler.opam  Makefile  compiler.ml  dune-project  test0.lambda  y
Lambda part/lib/: ast.ml  compiler.ml  dune  lexer.ml  parser.mly
Lambda part/test/: dune  test_LambdaCompiler.ml  test_Lexer.ml  test_Parser.ml
Lambda part/test/lambda/: fact.lambda  fact2.lambda  succ-qol.lambda  succ.lambda  test0.lambda  test1.lambda  test2.lambda  test3.lambda  y copy 2.lambda  y copy.lambda  y.asm  y.lambda
tests/: benchmark.labmda  bigint.labmda  pi  spigotto.labmda  spigotto.py  test_alphabet  test_cazzopalle  test_cazzopalle_delay  test_cazzopallerec  test_fibo  test_fun_param  test_interactive  test_interrupt  test_mul  test_print  test_tuple  test_y  three_sum  vattelappesca.labmda  vattelappesca.py  ypi.py
utils/: disk.asm  print_string.asm
(+6 files in other folders)
